# RogueEng

./: .gitignore  CMakeLists.txt  README.md
shaders/: basic.vert  default.frag  default.vert  light_shader.frag  light_source.frag  solid_material.frag  text.frag  text.vert  texture_color.frag  tutorial.vert
src/: CMakeLists.txt  camera.hpp  core_render.cpp  core_render.hpp  engine.cpp  engine.hpp  engine_render.cpp  engine_types.hpp  game.cpp  game.hpp  input.cpp  input.hpp  main.cpp  player.hpp  render.cpp  render.hpp  render_manager.cpp  render_manager.hpp  renderable.cpp  renderable.hpp  shader.hpp  stats.hpp  text.cpp  text.hpp  util.cpp  util.hpp
